--- a/index.html
+++ b/index.html
@@ -10,16 +10,33 @@
 </head>
 
 <body>
-  <div class="wrapper">
-    <div class="title">
-      Employee Director
+  <div class="app">
+    <div class="wrapper">
+      <div class="title">
+        Employee Director
+      </div>
+      <input type="text" placeholder="Search.." name="search" class="search">
+      <div id="databaseinclude" class="container">
+      </div>
     </div>
-    <input type="text" placeholder="Search.." name="search" class="search">
-    <div id="databaseinclude" class="shop-items">
+    <div class="wrapper-right">
+
+      <div class="title">
+        Employee
+      </div>
+      <div class="cart-row">
+        <span class="pernonel-image cart-header cart-column">PHOTO</span>
+        <span class="personel-name cart-header cart-column">NAME</span>
+        <span class="personel-distance cart-header cart-column">DISTANCE</span>
+      </div>
+      <div class="cart-items">
+
+      </div>
     </div>
   </div>
   <script src="database.js"></script>
-    <script src="app.js"></script>
+  <script src="app.js"></script>
+
 </body>
 
 
